Align Correction

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ html {
 
 
 .main {
-    margin-left: 180px;
+
     padding: 0 10px;
     background-colour: #000000;
 }
